fix: 자동차 입력받는 메소드 수정
- 자동차 이름의 길이 제한 수정(5글자 포함)
- 에러 메시지 출력 추가